# pixel-rest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  compose.yaml  config.yaml  infer.py  pyproject.toml  train.py
pixel_rest_src/: data_utils.py  loss.py  model.py  train.py
